# mobile_robotics_ROS2

./: .gitignore  .gitmodules  README.md  installations_testing.md  microros_instaliation.md  recording_levels.md
Esp32_MicroROS/: platformio.ini
Esp32_MicroROS/lib/Camera Configuration/: camera_httpd.cpp  camera_pins.h
Esp32_MicroROS/py_pkg/: setup.cfg  setup.py
Esp32_MicroROS/py_pkg/py_pkg/: subscriber_node.py
Esp32_MicroROS/src/: main.cpp
drive_tb3/: CMakeLists.txt  package.xml
drive_tb3/blender/: untitled.blend  untitled.blend1
drive_tb3/launch/: p2_a_spawn_tb3.launch.py  p2_a_spawn_turtlebot3.launch.py  p2_b_multi_tb3.launch.py  p2_b_spawn_multi_tb3.launch.py  p2_c_drive_sqaure_multi_tb3.launch.py  p2_c_multi_robot_square.launch.py  p3_a_maths.launch.py  p3_tb3_go_to_goal.launch.py  p5_a_maze_solve.launch.py  p5_b_line_following.launch.py  p5_camera_lidar_race.launch.py  p6_a_maze_mapping.launch.py  p6_b_maze_navigation.launch.py  p_a_maze_solver.launch.py
drive_tb3/models/sensor_test_track/: model.config  model.sdf
drive_tb3/src/: p2_multi_robot_square.cpp  p2_multi_tb3_sqaure_drive.cpp  p3_a_acceleration.cpp  p3_b_angular_velocity.cpp  p3_c_linear_goal.cpp  p3_d_xy_goal.cpp  p3_go_to_goal.cpp  p5_a_lidar_data_sub.cpp  p5_b_maze_solving.cpp  p5_c_camera_data_sub.cpp  p5_camera_a_feed_process.cpp  p5_camera_b_feed_process.cpp  p5_d_line_following.cpp  p5_lidar_a_processing.cpp  p5_lidar_b_processing.cpp  p5_lidar_c_processing.cpp  p5_lidar_d_processing.cpp  p6_a_occupancy_grid.cpp  p6_b_sdf_spawner.cpp  p6_c_commander_api_go_to_pose.py  robot_square.cpp
drive_tb3/world/: sensor_test_track.world
drive_tb3/worlds/: line_following.world
drive_turtle/: CMakeLists.txt  package.xml
drive_turtle/launch/: p1_2_multi_robot_single_sim.launch.py  p1_a_multi_robot_multi_sim.launch.py  p1_b_multi_robot_single_sim.launch.py  p1_c_multi_robot_controller.launch.py  p1_d_run_multi_turtlesim_drive.launch.py
drive_turtle/src/: p1_3_multi_turtle_controller.cpp  p1_a_single_straight_drive.cpp  p1_b_multi_straight_drive.cpp  p1_c_multi_turtle_controller.cpp
esp32_drive/: app.c
microROS_bot/: Readme.md
microROS_bot/lib/ros_communication/: ros_communication.cpp
microROS_bot/src/: main.cpp
point_cloud_processing/: CMakeLists.txt  package.xml
point_cloud_processing/launch/: p9_a_rtab_mapping.launch.py
point_cloud_processing/point_clouds/: circular_cloud.pcd  plane.pcd  plane_.pcd
point_cloud_processing/resource/: .38553d294371dbd5752426cc805039aeae63dd03.cam
point_cloud_processing/src/: p9_a_table_scene.cpp  p9_b_planner_cloud.cpp  p9_c_circular_cloud.cpp  p9_d_filtering_segmentation.cpp  p9_e_point_path_drawing.cpp
py_pkg/: package.xml  setup.py
py_pkg/py_pkg/: diff_tf.py
py_slambot/: package.xml  setup.cfg  setup.py
py_slambot/launch/: b_lidar_occupancy.launch.py  pc_a_odom-view.launch.py  rpi_a_robot_drive_enc_pub.launch.py
py_slambot/py_slambot/: p7_a_cmd_vel_ros.py  p7_a_encoders.py  p7_a_encoders_ros.py  p7_b_occupancy_grid.py  p7_b_occupancy_gridCSV.py
py_slambot/rviz/: odom_view.rviz
slambot/: CMakeLists.txt  package.xml
slambot/launch/: a_rviz.launch.py  b_lidar.launch.py  c_odom.launch.py  d_slam.launch.py  e_nav.launch.py  lidar.launch.py
slambot/microROS_bot/: platformio.ini
slambot/microROS_bot/lib/motor_control/: motor_control.cpp  motor_control.h
slambot/microROS_bot/lib/ros_communication/: ros_communication.h
slambot/src/: p7_a_drive_control.py  p7_a_encoders.cpp  p7_a_encoders.py  p7_a_encoders_difference.cpp  p7_a_encoders_direction_manual.cpp  p7_a_encoders_manual_interrupt.cpp  p7_a_encoders_tick_rev.cpp  p7_a_imus.cpp  p7_a_motor_driving.cpp  p7_a_motors.py  p7_b_cmd_vel_drive.cpp  p7_b_sensor_publish.cpp  p7_c_cmd_vel.cpp  p7_c_odom.py  test_gpio.cpp
